# HALE_

./: Cargo.toml  README.md  runtime_readme.md
scripts/: create_batched_alignments.sh  hale-env.yml
src/: consensus.rs  correct.rs  features.rs  haec_io.rs  hale_updated.rs  het_sites_map.rs  lib.rs  main.rs  overlaps.rs  windowing.rs
