[package]
name = "hale"
version = "0.1.0"
authors = ["Parvesh Barak"]
edition = "2021"
description = "HALE is a haplotype-aware long read error correction tool which works best on HiFi reads and can be used to improve ONT Simplex (both long and ultralong reads)"
readme = "README.md"
repository = "https://github.com/parveshbarak/HALE"
keywords = ["error-correction", "haplotype-aware", "bioinformatics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "~4.4.2", features = ["derive"] }
needletail = "~0.5.0"
itertools = "~0.12.0"
indicatif = "~0.17.2"
ordered-float = "~4.2.0"
ndarray = "~0.15.6"
npyz = { version = "~0.8.1", features = ["derive"] }
crossbeam-channel = "~0.5.8"
rustc-hash = "~1.1.0"
glob = "~0.3.1"
zstd = "~0.13.0"
jemallocator = "~0.5.4"
rand = "0.8"
num_cpus = "1.16"
rayon = "1.8"

[dev-dependencies]
approx = "~0.5.1"
ndarray = { version = "~0.15.6", features = ["approx-0_5"] }
